feat: 添加官网首页样式和功能
- 新增 app.css 文件，包含官网首页的全部样式
- 新增 app.js 文件，实现官网首页的功能模块
- 添加页面可见性检测、轮播图、移动端菜单、版本信息获取等功能
- 优化响应式布局，适配不同屏幕尺寸
- 实现暗黑模式支持

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="领创工作室 - 数码科技与创意内容平台" />
     <meta property="og:description" content="探索领创工作室，获取专业的数码科技解决方案，包括原创软件工具、技术教程和创意内容资源。" />
     <meta name="robots" content="index, follow" />
-    <!-- 保留原有canonical标签和其他内容 -->
+    <!-- 保留原有canonical标签和 -->
     <link rel="canonical" href="https://lacs.cc/" />
     <!-- 引入Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
